2.7-0
	A bug in the calculation of BIC has been fixed: the effective
	number of parameters in the likelihood was not correctly
	calculated. If the BIC is only used in selecting the number of
	clusters, the qualitative results should not be affected (i.e.,
	the selected cluster count should be the same). (This BIC should
	not, in general, be used to select the latent space dimension or
	whether or not to include random effects.)

	bic.ergmm() no longer prints out a warning with random actor
	effects models.

	bic.ergmm() now takes an additional argument, eff.obs, specifying
	how to calculate the effective number of observations. The default
	prior to this release has been the number of actors in the
	network. The new default is the number of ties, as Handcock et
	al. (2007) recommend.

	latentnet no longer accesses unexported object in coda's
	namespace, as it no longer needs to redefine coda's generics.

2.6-0
	Normal model with identity link can now estimate the dispersion
	(variance) parameter. (Before, it had to be specified.)

	Improved compatibility with ergm 3.2, including removal of
	mcmc.diagnostics() and other prototypes.

	A number of bugs have been fixed, including some code warnings
	from the latest versions of R.

	Kirk Li and Li Wang have been added as contributors for making
	many of these fixes.

	Sampson's monks dataset included with latentnet now has some
	additional attributes.

2.5-1
	A bug in importing of ergm terms for undirected networks has been
	fixed.

2.5-0
	The deprecated term `latent` has been removed. Use `euclidean`
	instead.

	summary() and print() functions have somewhat more intelligent
	defaults.

	latentnet can now use ergm() terms as covariates in the model (and
	the prior can still be specified). These should work seamlessly
	for networks without self-loops. ergmm() terms to model self-loops
	explicitly have been added.

	Intercepts are handled a bit more intelligently.

2.4-5